--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-server.servlet.context-path=/academy-task
+#server.servlet.context-path=
 
 spring.datasource.username=root
 spring.datasource.password=123456
